changed user model and fixed error messages in hygiene and food controllers
