# controllers/user.js
@@ -41,48 +41,50 @@ const getUserByEmail = async (req, res) => {
   };
 
 
-  const createNewUser = async (req, res) => {
-    try {
-      if (!req.body.userName || !req.body.email || !req.body.password) {
-        res.status(400).send({ message: 'Input can not be empty!' });
-        return;
-      }
+  // const createNewUser = async (req, res) => {
+  //   try {
+  //     if (!req.body.userName || !req.body.email || !req.body.password) {
+  //       res.status(400).send({ message: 'Input can not be empty!' });
+  //       return;
+  //     }
 
-      const user = new User(req.body);
-      user
-        .save()
-        .then((data) => {
-          console.log(data);
-          res.status(201).send(data);
-        })
-        .catch((err) => {
-          res.status(500).send({
-            message: err.message || 'Some error occurred while creating the user.'
-          });
-        });
-    } catch (err) {
-      res.status(500).json(err);
-    }
-  };
+  //     const user = new User(req.body);
+  //     user
+  //       .save()
+  //       .then((data) => {
+  //         console.log(data);
+  //         res.status(201).send(data);
+  //       })
+  //       .catch((err) => {
+  //         res.status(500).send({
+  //           message: err.message || 'Some error occurred while creating the user.'
+  //         });
+  //       });
+  //   } catch (err) {
+  //     res.status(500).json(err);
+  //   }
+  // };
   
   const updateUser = async (req, res) => {
     try {
       const email = req.params.email;
-    //   if (!email) {
-    //     res.status(400).send({ message: 'Invalid email Supplied' });
-    //     return;
-    //   }
 
-    if (!req.body.userName || !req.body.email || !req.body.password) {
-        res.status(400).send({ message: 'Input can not be empty!' });
+      if (!email) {
+        res.status(400).send({ message: 'Invalid email Supplied' });
         return;
       }
 
+      // if (!req.body.userName || !req.body.email || !req.body.password) {
+      //   res.status(400).send({ message: 'Input can not be empty!' });
+      //   return;
+      // }
+
   
       User.findOne({ email: email }, function (err, user) {
-        user.userName = req.body.userName;
-        user.email = req.body.email;
-        user.password = req.body.password;
+        // user.userName = req.body.userName;
+        // user.email = req.body.email;
+        // user.password = req.body.password;
+        user.familyName = req.body.familyName;
         user.save(function (err) {
           if (err) {
             res.status(500).json(err || 'Some error occurred while updating the user.');
@@ -121,4 +123,4 @@ const getUserByEmail = async (req, res) => {
   };
   
 
-module.exports = { getAllUsers, getUserByEmail, createNewUser, updateUser, deleteUser };
+module.exports = { getAllUsers, getUserByEmail, updateUser, deleteUser };
